--- a/package.json
+++ b/package.json
@@ -21,6 +21,7 @@
     "@discordjs/builders": "^1.4.0",
     "@discordjs/opus": "^0.8.0",
     "@discordjs/rest": "^1.4.0",
+    "canvas": "^2.10.2",
     "discord-player": "^5.3.2",
     "discord.js": "^14.7.1",
     "dotenv": "^16.0.3",
